# python-playground

./: .gitignore  Makefile  pyproject.toml  requirements.txt
01_read_csv/: main.py
02_plot_time/: main.py
03_hello_mojo/: main.mojo
04_intercept_warnings/: .gitignore  all_lines_valid.csv  first_line_invalid.csv  first_line_valid.csv  main.py
05_printing_lists/: main.py
06_binary_search_performance/: README.md  main.mojo  main.py  python.prof
07_duplicate_file/: 101_lines.txt  main.py
08_exploring_polars/: main.py
08_polars_basics/: main.py
09_transactions_dataset_with_polars/: main.py  transactions.csv
10_more_polars/: main.py
10_titanic_dataset_with_polars/: main.py
11_phonetic_algorithms/: Makefile  main.py
11_phonetic_algorithms/src/: soundex.dart  soundex.mojo  soundex.py
11_phonetic_algorithms/tests/: test_soundex.dart  test_soundex.mojo  test_soundex.py
12_create_names_dataset/: main.py  names.txt
13_us_census_data_names/: main.py
14_metaphone/: main.py
15_compare_csv_files/: .gitignore  main.py
16_plot_benchmarks/: main.py
17_cli_spiner/: main.py  spinner.py  stages_demo.py
18_python_binaries/: .gitignore  Makefile
19_generate_csv_comparison_data/: file1_basic.csv  file1_column_order.csv  file1_ignore_column.csv  file1_no_headers.csv  file1_real_world.csv  file2_basic.csv  file2_column_order.csv  file2_ignore_column.csv  file2_no_headers.csv  file2_real_world.csv  file2_row_order.csv  main.py
20_csv_column_to_text_file/: main.py
21_list_vs_set_standard_ordering/: main.py
read_csv/: all.csv  main.py
(+47 files in other folders)
