[project]
name = "python-playground"
version = "0.1.0"
description = "A playground for experimenting with Python e.g. data processing, plotting"
authors = [
    { name = "Cillian Myles" }
]

[tool.pdm]
# Uncomment if using PDM as a package manager
# python_requires = ">=3.8"

[tool.poetry]
# Uncomment if using Poetry as a package manager
# python = ">=3.8"

[project.dependencies]
pandas = "2.3.2"
pyarrow = "21.0.0"
polars = "1.33.1"
